# sre-incident-commander

./: Dockerfile  PLAN.md  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
docs/: HACKATHON_OVERVIEW.md  INFERENCE_RESULTS.md  JUDGING_CRITERIA.md  OPENENV_FRAMEWORK.md  OUR_SUBMISSION_STATUS.md  SAMPLE_INFERENCE_REFERENCE.py  SUBMISSION_REQUIREMENTS.md  VALIDATION_SCRIPT.md  validate-submission.sh
server/: app.py  environment.py
tests/: test_environment.py
